objects/RiskReview__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Holds parameter for Risk Review</description>
    <fields>
        <fullName>RR_App_URL__c</fullName>
        <defaultValue>&quot;/rr/riskreview/externalSystemRequest.jsf&quot;</defaultValue>
        <description>The URL of the RiskReview Application, relative to RR_Server__c</description>
        <label>RR_App_URL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RR_Check_URL__c</fullName>
        <defaultValue>&quot;/rr/images/help-popup.gif&quot;</defaultValue>
        <description>URL to an image file that can be used to check if the RR server is reachable</description>
        <label>RR_Check_URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RR_Mode__c</fullName>
        <label>RR Mode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RR_Server__c</fullName>
        <defaultValue>&quot;https://www209.abb.com&quot;</defaultValue>
        <description>Holds URL to Risk Review server</description>
        <label>RR_Server</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>extSystemId__c</fullName>
        <defaultValue>&quot;9AAG10077&quot;</defaultValue>
        <description>The GAR ID to be used for Salesforce as external system in ABB</description>
        <label>extSystemId</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Risk Review</label>
</CustomObject>